--- a/views/test.jade
+++ b/views/test.jade
@@ -25,5 +25,6 @@ html
           input(id="my-input",type='text', data-slider='true', value='0.8', data-slider-highlight='true', style='display: none;')
   script(src="/jquery.min.js")
   script(src='howler/howler.min.js')
+  script(src="jrumble/jquery.jrumble.1.3.min.js")
   script(src="test.js")
   script(src='slider/js/simple-slider.js')
