--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ html
           h1!= message
       .row.options
         .col-md-6.col-md-offset-2.control
-          input(id="userInput", type='number', value='90', min="0", max="500", onkeyup="keyChange()")
+          input(id="userInput", type='number', value='120', min="0", max="400", onkeyup="keyChange()")
           button(id="startStopButton", onclick='toggle(this)', value='OFF') START
       .row
         .col-md-8.col-md-offset-2.displayBeeps
@@ -26,5 +26,5 @@ html
   script(src="/jquery.min.js")
   script(src='howler/howler.min.js')
   script(src="jrumble/jquery.jrumble.1.3.min.js")
-  script(src="loop.js")
+  script(src="test.js")
   script(src='slider/js/simple-slider.js')
