--- a/views/test.jade
+++ b/views/test.jade
@@ -23,8 +23,7 @@ html
       .row
         .col-md-8.col-md-offset-2
           input(id="my-input",type='text', data-slider='true', value='0.8', data-slider-highlight='true', style='display: none;')
-  //- script(src="/jquery.min.js")
-  script(src="/jquery-1.12.0.js")
+  script(src="/jquery-1.12.0.min.js")
   script(src='howler/howler.min.js')
   script(src="jrumble/jquery.jrumble.1.3.min.js")
   script(src="test.js")
