--- a/views/test.jade
+++ b/views/test.jade
@@ -12,17 +12,18 @@ html
           h1!= message
       .row.options
         .col-md-6.col-md-offset-2.control
-          input(id="userInput", type='number', value='120', min="0", max="400", onkeyup="keyChange()")
           button(id="startStopButton", onclick='toggle(this)', value='OFF') START
+          input(id="userInput", type='number', value='120', min="0", max="400", onkeyup="keyChange()")
+          div#volumeContainer
+            span#volumeIcon.glyphicon.glyphicon-volume-up
+          span#volumeControl
+            input(id="my-input",type='text', data-slider='true', value='1', data-slider-highlight='true', style='display: none;')
       .row
         .col-md-8.col-md-offset-2.displayBeeps
           #beat.q1
           #beat.q2
           #beat.q3
           #beat.q4
-      .row
-        .col-md-8.col-md-offset-2
-          input(id="my-input",type='text', data-slider='true', value='0.8', data-slider-highlight='true', style='display: none;')
   script(src="/jquery-1.12.0.min.js")
   script(src='howler/howler.min.js')
   script(src="jrumble/jquery.jrumble.1.3.min.js")
