--- a/static/slider/css/simple-slider.css
+++ b/static/slider/css/simple-slider.css
@@ -1,12 +1,12 @@
 .slider {
-  width: 150px;
+  width: 100px;
 }
 
 .slider > .dragger {
-  background: #8DCA09;
-  background: -webkit-linear-gradient(top, #8DCA09, #72A307);
-  background: -moz-linear-gradient(top, #8DCA09, #72A307);
-  background: linear-gradient(top, #8DCA09, #72A307);
+  background: #0e83cd;
+  background: -webkit-linear-gradient(top, #0e83cd, #095B8F);
+  background: -moz-linear-gradient(top, #0e83cd, #095B8F);
+  background: linear-gradient(top, #0e83cd, #095B8F);
 
   -webkit-box-shadow: inset 0 2px 2px rgba(255,255,255,0.5), 0 2px 8px rgba(0,0,0,0.2);
   -moz-box-shadow: inset 0 2px 2px rgba(255,255,255,0.5), 0 2px 8px rgba(0,0,0,0.2);
@@ -22,15 +22,15 @@
 }
 
 .slider > .dragger:hover {
-  background: -webkit-linear-gradient(top, #8DCA09, #8DCA09);
+  background: -webkit-linear-gradient(top, #0e83cd, #0e83cd);
 }
 
 
 .slider > .track, .slider > .highlight-track {
-  background: #ccc;
-  background: -webkit-linear-gradient(top, #bbb, #ddd);
-  background: -moz-linear-gradient(top, #bbb, #ddd);
-  background: linear-gradient(top, #bbb, #ddd);
+  background: #fff;
+  background: -webkit-linear-gradient(top, #fff, #ddd);
+  background: -moz-linear-gradient(top, #fff, #ddd);
+  background: linear-gradient(top, #fff, #ddd);
 
   -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.1);
   -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,0.1);
@@ -45,10 +45,10 @@
 }
 
 .slider > .highlight-track {
-	background-color: #8DCA09;
-	background: -webkit-linear-gradient(top, #8DCA09, #72A307);
-	background: -moz-linear-gradient(top, #8DCA09, #72A307);
-	background: linear-gradient(top, #8DCA09, #72A307);
+	background-color: #0e83cd;
+	background: -webkit-linear-gradient(top, #0e83cd, #0e89d7);
+	background: -moz-linear-gradient(top, #0e83cd, #0e89d7);
+	background: linear-gradient(top, #0e83cd, #0e89d7);
 	border-color: #496805;
 }
 
