--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,7 @@ html
       .row.options
         .col-md-6.col-md-offset-2.control
           button(id="startStopButton", onclick='toggle(this)', value='OFF') START
-          input(id="userInput", type='number', value='120', min="0", max="400", onkeyup="keyChange()")
+          input(id="userInput", type='number', value='120', min="0", max="400", maxlength="3", onkeyup="keyChange()", oninput="maxLengthCheck(this)", onKeyPress="return numbersonly(this, event)")
           div#volumeContainer
             span#volumeIcon.glyphicon.glyphicon-volume-up
             span#volumeControl(style="display:none;")
@@ -29,3 +29,18 @@ html
   script(src="jrumble/jquery.jrumble.1.3.min.js")
   script(src="loop.js")
   script(src='slider/js/simple-slider.js')
+  script.
+      function maxLengthCheck(object) {
+      if (object.value.length > object.maxLength)
+      object.value = object.value.slice(0, object.maxLength)
+      }
+      function isNumeric (evt) {
+      var theEvent = evt || window.event;
+      var key = theEvent.keyCode || theEvent.which;
+      key = String.fromCharCode (key);
+      var regex = /[0-9]|\\./;
+      if ( !regex.test(key) ) {
+      theEvent.returnValue = false;
+      if(theEvent.preventDefault) theEvent.preventDefault();
+      }
+      }
