--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,12 @@ html
     link(rel='stylesheet', type='text/css', href='/style.css')
     link(rel='stylesheet', type='text/css', href='/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', type='text/css', href='/slider/css/simple-slider.css')
+    style.
+      @media (max-width: 992px){
+      div.control{
+      margin-left:75px;
+      }
+      }
   body
     #container
       .row.titleText
